sebs url, better quit, security, better config